Enforce authOptions with getServerSession wrapper
Next-Auth's type definitions for getServerSession() don't enforce
the first argument, and v5 (aka Auth.js) removes the function
altogether, so an upstream fix is probably not in the books. And
since the upstream docs recommend a wrapper (see
https://next-auth.js.org/configuration/nextjs#getserversession), we
can just enforce that through ESLint to avoid future instsances of
the auth options not being passed.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,6 +77,18 @@
             "importNames": ["VisuallyHidden"],
             "message":
               "Please use the <VisuallyHidden> component from `/src/app/components/server/VisuallyHidden.tsx` instead of the one from react-aria, since the latter's (inline) styles will be stripped by our Content Security Policy."
+          },
+          {
+            "name": "next-auth",
+            "importNames": ["getServerSession"],
+            "message":
+              "Please use the `getServerSession` wrapper function from `/src/app/functions/server/getServerSession.ts` instead of the one from next-auth, since the latter's doesn't enforce passing the auth configuration object, resulting in broken sessions."
+          },
+          {
+            "name": "next-auth/next",
+            "importNames": ["getServerSession"],
+            "message":
+              "Please use the `getServerSession` wrapper function from `/src/app/functions/server/getServerSession.ts` instead of the one from next-auth, since the latter's doesn't enforce passing the auth configuration object, resulting in broken sessions."
           }
         ]
       }
